Add Service to expose API behind a load balancer

--- a/aks/monobot-media-api.yml
+++ b/aks/monobot-media-api.yml
@@ -22,3 +22,15 @@ spec:
             memory: 512M
           requests:
             memory: 512M
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: monobot-media-api-service
+spec:
+  type: LoadBalancer
+  selector:
+    app: monobot-media-api
+  ports:
+  - port: 80
+    targetPort: 8080
