--- a/aks/monobot-media-api.yml
+++ b/aks/monobot-media-api.yml
@@ -22,12 +22,12 @@ spec:
           valueFrom:
             secretKeyRef:
               name: flickr-api
-              key: flickr.api.key
+              key: flickr.api.key.txt
         - name: FLICKR_API_SECRET
           valueFrom:
             secretKeyRef:
               name: flickr-api
-              key: flickr.api.secret
+              key: flickr.api.secret.txt
         resources:
           limits:
             memory: 512M
