--- a/cluster/resources/cert-manager-cluster-issuer.yml
+++ b/cluster/resources/cert-manager-cluster-issuer.yml
@@ -1,11 +1,11 @@
 apiVersion: certmanager.k8s.io/v1alpha1
-kind: Issuer
+kind: ClusterIssuer
 metadata:
-  name: mediobot-issuer-prod
+  name: letsencrypt-prod
 spec:
   acme:
     server: https://acme-v02.api.letsencrypt.org/directory
     email: ppironin@agaetis.fr
     privateKeySecretRef:
-      name: mediobot-issuer-prod
-    dns01: {}
+      name: letsencrypt-prod
+    http01: {}
