--- a/mediobot/resources/mediobot.yml
+++ b/mediobot/resources/mediobot.yml
@@ -5,29 +5,16 @@ metadata:
 spec:
   secretName: mediobot-certificate-prod
   issuerRef:
-    name: mediobot-issuer-prod
-    kind: Issuer
+    name: letsencrypt-prod
+    kind: ClusterIssuer
   dnsNames:
   - monobot-ingress.eastus.cloudapp.azure.com
   acme:
     config:
     - http01:
-        ingress: mediobot-ingress
+        ingress: detectobot-ingress
       domains:
       - mediobot.monobot.fr
----
-
-apiVersion: certmanager.k8s.io/v1alpha1
-kind: Issuer
-metadata:
-  name: mediobot-issuer-prod
-spec:
-  acme:
-    server: https://acme-v02.api.letsencrypt.org/directory
-    email: ppironin@agaetis.fr
-    privateKeySecretRef:
-      name: mediobot-issuer-prod
-    http01: {}
 ---
 
 apiVersion: apps/v1
@@ -102,7 +89,7 @@ metadata:
   annotations:
     ingress.kubernetes.io/ssl-redirect: "true"
     kubernetes.io/tls-acme: "true"
-    certmanager.k8s.io/issuer: mediobot-issuer-prod
+    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
 spec:
   tls:
   - hosts:
