--- a/detectobot/resources/detectobot.yml
+++ b/detectobot/resources/detectobot.yml
@@ -36,6 +36,11 @@ spec:
       containers:
       - name: detectobot
         image: agaetisit/detectobot:latest
+        resources:
+          limits:
+            memory: 512M
+          requests:
+            memory: 512M
         volumeMounts:
           - mountPath: "/input"
             name: picturestorage
