--- a/detectobot/resources/detectobot.yml
+++ b/detectobot/resources/detectobot.yml
@@ -38,9 +38,9 @@ spec:
         image: agaetisit/detectobot:latest
         resources:
           limits:
-            memory: 512M
+            memory: 2G
           requests:
-            memory: 512M
+            memory: 2G
         volumeMounts:
           - mountPath: "/input"
             name: picturestorage
