Remove HTTPS, set MongoDB version due to buggy latest version and rename Pictures pvc.

--- a/cluster/resources/pictures-pvc.yml
+++ b/cluster/resources/pictures-pvc.yml
@@ -16,7 +16,7 @@ allowVolumeExpansion: true
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: picturestorage-pvc
+  name: pictures-pvc
 spec:
   accessModes:
     - ReadWriteMany
