--- a/detectobot/resources/detectobot.yml
+++ b/detectobot/resources/detectobot.yml
@@ -48,7 +48,14 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: detectobot-ingress
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    ingress.kubernetes.io/ssl-redirect: "true"
 spec:
+  tls:
+  - hosts:
+    - detectobot.monobot.fr
+    secretName: detectobot-certificate-prod-tls
   rules:
   - host: detectobot.monobot.fr
     http:
