--- a/webobot/resources/webobot.yml
+++ b/webobot/resources/webobot.yml
@@ -41,7 +41,14 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: webobot-ingress
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    ingress.kubernetes.io/ssl-redirect: "true"
 spec:
+  tls:
+  - hosts:
+    - monobot.fr
+    secretName: webobot-certificate-prod-tls
   rules:
   - host: monobot.fr
     http:
